be/src/MentorPlatform.API/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mentorplatform-api-service
  namespace: mentorplatform
  labels:
    app: mentorplatform-api
spec:
  type: NodePort
  selector:
    app: mentorplatform-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
    nodePort: 32080
    protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
apiVersion: v1
kind: Service
metadata:
  name: mentorplatform-api-loadbalancer
  namespace: mentorplatform
  labels:
    app: mentorplatform-api
spec:
  type: LoadBalancer
  selector:
    app: mentorplatform-api
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: ClientIP
